@@ -1,7 +1,7 @@
 package DBIx::Custom;
 use Object::Simple -base;
 
-our $VERSION = '0.1714';
+our $VERSION = '0.1715';
 use 5.008001;
 
 use Carp 'croak';
@@ -344,7 +344,7 @@ sub each_table {
 
 our %VALID_ARGS = map { $_ => 1 } qw/append allow_delete_all
   allow_update_all bind_type column filter id join param prefix primary_key
-  query relation table table_alias type type_rule_off type_rule1_off
+  query relation sqlfilter table table_alias type type_rule_off type_rule1_off
   type_rule2_off wrap/;
 
 sub execute {
@@ -370,6 +370,7 @@ sub execute {
     };
     my $query_return = delete $args{query};
     my $table_alias = delete $args{table_alias} || {};
+    my $sqlfilter = $args{sqlfilter};
     
     # Check argument names
     foreach my $name (keys %args) {
@@ -377,8 +378,7 @@ sub execute {
           unless $VALID_ARGS{$name};
     }
     
-    # Create query
-    $query = $self->_create_query($query) unless ref $query;
+    $query = $self->_create_query($query, $sqlfilter) unless ref $query;
     
     # Save query
     $self->last_sql($query->sql);
@@ -448,7 +448,7 @@ sub execute {
         $type_filters,
         $bind_type
     );
-    
+
     # Execute
     my $sth = $query->sth;
     my $affected;
@@ -1119,7 +1119,7 @@ sub where { DBIx::Custom::Where->new(dbi => shift, @_) }
 
 sub _create_query {
     
-    my ($self, $source) = @_;
+    my ($self, $source, $sqlfilter) = @_;
     
     # Cache
     my $cache = $self->cache;
@@ -1163,7 +1163,16 @@ sub _create_query {
             }
         ) if $cache;
     }
-    
+
+    # Filter SQL
+    if ($sqlfilter) {
+        my $sql = $query->sql;
+        $sql =~ s/\s*;$//;
+        $sql = $sqlfilter->($sql);
+        $sql .= ';';
+        $query->sql($sql);
+    }
+        
     # Save sql
     $self->last_sql($query->sql);
     
@@ -2253,6 +2262,17 @@ The following opitons are available.
 
 =over 4
 
+=item C<bind_type>
+
+Specify database bind data type.
+
+    bind_type => [image => DBI::SQL_BLOB]
+    bind_type => [[qw/image audio/] => DBI::SQL_BLOB]
+
+This is used to bind parameter by C<bind_param> of statment handle.
+
+    $sth->bind_param($pos, $value, DBI::SQL_BLOB);
+
 =item C<filter>
     
     filter => {
@@ -2313,6 +2333,29 @@ Note that $row must be simple hash reference, such as
 {title => 'Perl', author => 'Ken'}.
 and don't forget to sort $row values by $row key asc order.
 
+=item C<sqlfilter EXPERIMENTAL> 
+
+SQL filter function.
+
+    sqlfilter => $code_ref
+
+This option is generally for Oracle and SQL Server paging process.
+    
+    my $limit = sub {
+        my ($sql, $count, $offset) = @_;
+        
+        my $min = $offset + 1;
+        my $max = $offset + $count;
+        
+        $sql = "select * from ( $sql ) as t where rnum >= $min rnum <= $max";
+        
+        return $sql;
+    }
+    $dbi->select(... column => ['ROWNUM rnom'], sqlfilter => sub {
+        my $sql = shift;
+        return $limit->($sql, 100, 50);
+    })
+
 =item C<table>
     
     table => 'author'
@@ -2328,17 +2371,6 @@ You must set C<table> option.
     $dbi->execute(
       "select * from book where title = :book.title and author = :book.author",
       {title => 'Perl', author => 'Ken');
-
-=item C<bind_type>
-
-Specify database bind data type.
-
-    bind_type => [image => DBI::SQL_BLOB]
-    bind_type => [[qw/image audio/] => DBI::SQL_BLOB]
-
-This is used to bind parameter by C<bind_param> of statment handle.
-
-    $sth->bind_param($pos, $value, DBI::SQL_BLOB);
 
 =item C<table_alias> EXPERIMENTAL
 
@@ -2416,6 +2448,10 @@ prefix before table name section.
 
 Same as C<execute> method's C<query> option.
 
+=item C<sqlfilter EXPERIMENTAL>
+
+Same as C<execute> method's C<sqlfilter> option.
+
 =item C<table>
 
     table => 'book'
@@ -2479,6 +2515,10 @@ The following opitons are available.
 
 Same as C<select> method's C<append> option.
 
+=item C<bind_type>
+
+Same as C<execute> method's C<bind_type> option.
+
 =item C<filter>
 
 Same as C<execute> method's C<filter> option.
@@ -2524,15 +2564,15 @@ Primary key. This is used by C<id> option.
 
 Same as C<execute> method's C<query> option.
 
+=item C<sqlfilter EXPERIMENTAL>
+
+Same as C<execute> method's C<sqlfilter> option.
+
 =item C<table>
 
     table => 'book'
 
 Table name.
-
-=item C<bind_type>
-
-Same as C<execute> method's C<bind_type> option.
 
 =item C<type_rule_off> EXPERIMENTAL
 
@@ -2832,6 +2872,10 @@ The following opitons are available.
     append => 'order by title'
 
 Append statement to last of SQL.
+
+=item C<bind_type>
+
+Same as C<execute> method's C<bind_type> option.
     
 =item C<column>
     
@@ -2968,9 +3012,9 @@ Primary key. This is used by C<id> option.
 
 Same as C<execute> method's C<query> option.
 
-=item C<bind_type>
+=item C<sqlfilter EXPERIMENTAL>
 
-Same as C<execute> method's C<bind_type> option.
+Same as C<execute> method's C<sqlfilter> option
 
 =item C<table>
 
@@ -3026,7 +3070,7 @@ Where clause.
 
 Wrap statement. This is array reference.
 
-    $dbi->select(wrap => ['select * from (', ') as t where ROWNUM < 10']);
+    wrap => ['select * from (', ') as t where ROWNUM < 10']
 
 This option is for Oracle and SQL Server paging process.
 
@@ -3050,6 +3094,10 @@ The following opitons are available.
 =item C<append>
 
 Same as C<select> method's C<append> option.
+
+=item C<bind_type>
+
+Same as C<execute> method's C<bind_type> option.
 
 =item C<filter>
 
@@ -3097,19 +3145,15 @@ Primary key. This is used by C<id> option.
 
 Same as C<execute> method's C<query> option.
 
+=item C<sqlfilter EXPERIMENTAL>
+
+Same as C<execute> method's C<sqlfilter> option.
+
 =item C<table>
 
     table => 'book'
 
 Table name.
-
-=item C<where>
-
-Same as C<select> method's C<where> option.
-
-=item C<bind_type>
-
-Same as C<execute> method's C<bind_type> option.
 
 =item C<type_rule_off> EXPERIMENTAL
 
@@ -3126,6 +3170,10 @@ Same as C<execute> method's C<type_rule1_off> option.
     type_rule2_off => 1
 
 Same as C<execute> method's C<type_rule2_off> option.
+
+=item C<where>
+
+Same as C<select> method's C<where> option.
 
 =back
 
