@@ -3411,6 +3411,23 @@ $dbi->select(
 };
 like($@, qr/array/);
 
+test 'select() sqlfilter option';
+$dbi = DBIx::Custom->connect;
+eval { $dbi->execute('drop table table1') };
+$dbi->execute($create_table1);
+$dbi->insert(table => 'table1', param => {key1 => 1, key2 => 2});
+$dbi->insert(table => 'table1', param => {key1 => 2, key2 => 3});
+$rows = $dbi->select(
+    table => 'table1',
+    column => 'key1',
+    sqlfilter => sub {
+        my $sql = shift;
+        $sql = "select * from ( $sql ) as t where key1 = 1";
+        return $sql;
+    }
+)->all;
+is_deeply($rows, [{key1 => 1}]);
+
 test 'dbi method from model';
 $dbi = MyDBI9->connect;
 eval { $dbi->execute('drop table table1') };
